cluster/apps/web-main/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-main
  labels:
    app: web-main

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-main
  template:
    metadata:
      labels:
        app: web-main
    spec:
      containers:
        - name: web-main
          image: nginx:alpine
          ports:
            - name: pod-http-port
              protocol: TCP
              containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: storage-volume
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "20m"
              memory: "20Mi"
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: web-main
