cluster/apps/web-main/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-main
  labels:
    app: web-main

spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: web-main
