cluster/apps/web-main/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-main
  labels:
    app: web-main
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zzd.ai
      secretName: my-certs-main
  rules:
    - host: zzd.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-main
                port:
                  number: 80
